--- a/index.html
+++ b/index.html
@@ -33,3 +33,7 @@
 
 </body>
 </html>
+
+<!-- dont be afraid to add some more css and design in the next one :)
+the app works well when i tested it, but if the gui had more design i think it would make sense to a user faster.
+ -->
